syntax = "proto3";

import "user.proto";

package pb;

option go_package = "github.com/RoyceAzure/go-stockinfo/shared/pb";

message GetUserRequest{
}

message GetUserResponse{
    User user=1;
}